--- a/Javascript/AngularJS/04-angular2-to-do/to-do/.gitignore
+++ b/Javascript/AngularJS/04-angular2-to-do/to-do/.gitignore
@@ -1,19 +1,11 @@
-.idea
-node_modules
-npm-debug.log
-bower_components
-app/*.js.map
-.DS_Store
-build/
-typings/
-.sass-cache
-
-
-# Angular Cli
+# See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
 /dist
 /tmp
+
+# dependencies
+/node_modules
 
 # IDEs and editors
 /.idea
