--- a/Javascript/ReactJS/01-help-queue/package.json
+++ b/Javascript/ReactJS/01-help-queue/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "webpack-dev-server": "^2.9.5"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
